--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,8 +204,10 @@ input, select {
 	padding: 10px 15px;
 	border-radius: 5px;
 	color: #808CA3;
+	background: white;
 	margin-right: 20px;
 	display: inline-block;
+	text-decoration: none;
 }
 
 select {
@@ -225,8 +227,9 @@ button.add {
 	color: #0F5EF7;
 	font-weight: 400;
 	padding: 15px 25px;
-	display: inline-block;
+	display: inline;
 	border-radius: 10px;
+	align-self: center;
 }
 
 .filters-box h1 {
@@ -234,6 +237,15 @@ button.add {
 	font-weight: 400;
 	display: inline;
 	margin: 0 5px;
+}
+
+input:read-only {
+	background: #E2E3E8;
+	color: #0F5EF7;
+}
+
+input#employee_id, input#deductible_id {
+	width: 40px;
 }
 
 /*** TABLES ***/
@@ -250,7 +262,7 @@ th {
 	font-weight: 300;
 	padding: 15px 25px;
 	text-align: left;
-	font-size: 15px;
+	font-size: 14px;
 }
 
 table th:first-child {
@@ -271,8 +283,8 @@ table tr:last-child td:last-child {
 
 td {
 	background: #EEF1FB;
-	padding: 12px 25px;
-	font-size: 15px;
+	padding: 15px 25px;
+	font-size: 14px;
 }
 
 td.total, td#total {
@@ -280,11 +292,13 @@ td.total, td#total {
 	background: #E2E3E8;
 }
 
-button.edit{
+button.edit, a.edit {
 	background: #0F5EF7;
 	color: white;
 	padding: 8px 30px;
 	border-radius: 5px;
+	text-decoration: none;
+	font-weight: 300;
 }
 
 button.delete {
@@ -296,6 +310,13 @@ button.delete {
 }
 
 /*** LOGIN PAGES ***/
+
+.forms {
+	display: flex;
+  	flex-wrap: wrap;
+  	gap: 15px;
+  	align-items: flex-center;
+}
 
 .login {
 	height: 100vh;
@@ -328,7 +349,7 @@ button.delete {
 	font-size: 24px;
 }
 
-.login-form input {
+.login-form input[type=text], .login-form input[type=password] {
 	margin: 0px;
 	display: block;
 	margin-top: 15px;
@@ -341,11 +362,15 @@ button.delete {
   	gap: 15px;
 }
 
-.login-form button {
+.login-form input[type=submit] {
 	margin-top: 15px;
 	flex: 1;
 	padding: 10px 15px;
 	border-radius: 5px;
 	font-weight: 700;
 	cursor: pointer;
+}
+
+.alert {
+	margin-top: 20px;
 }
